# Hypergraph-Analysis-Toolbox

./: .gitignore  .readthedocs.yaml  Hypergraph Analysis Toolbox.mltbx  PoreC Hypergraph Analysis Toolbox.mltbx  PoreCHypergraphAnalysisToolbox.prj  README.md  increment_version.py  mouse_neurons.csv  pyproject.toml
Python/:  del  GraphDecompositions.py  LICENSE  PYPIREADME.md  README.md  Similarity.py  pyproject.toml  requirements.txt
Python/HAT/: DirectedHypergraph.py  GraphDecompositions.py  Graphics.py  HAT.py  Hypergraph.py  README.md  TensorDecompositions.py  __init__.py  datasets.py  draw.py  dynamics.py  export.py  graph.py  hypergraph.py  laplacian.py  metrics.py  multilinalg.py  plot.py  pyproject.toml  tensors.py
Python/HAT/Hypergraph/: hypergraph.py  nonuniformHypergraph.py  uniformHypergraph.py
Python/HAT/data/: Harry Potter and the Sorcerers Stone.mat  aminer_cocitation.mat  aminer_coreference.mat  cora_coreference.mat
Python/dist_legacy/: hypergraphanalysistoolbox-0.0.1-py3-none-any.whl  hypergraphanalysistoolbox-1.0-py3-none-any.whl
Python/docs/: HAT.rst  conf.py  control.rst  data.rst  demos.rst  hypergraph.rst  hypergraph.txt  index.rst  properties.rst  ref.rst  tutorials.rst  visualization.rst
Python/docs/_build/doctrees/: HAT.doctree  control.doctree  decompositions.doctree  dev.doctree  environment.pickle  hypergraph.doctree  index.doctree  install.doctree  intro.doctree  modules.doctree  properties.doctree  ref.doctree  similarity.doctree  tutorials.doctree  visualization.doctree
Python/docs/_build/html/: .buildinfo  HAT.html  control.html  decompositions.html  dev.html  genindex.html  hypergraph.html  index.html  install.html  intro.html  modules.html  objects.inv  properties.html  py-modindex.html  ref.html  search.html  searchindex.js  similarity.html  tutorials.html  visualization.html
Python/docs/_build/html/_modules/: index.html
Python/docs/_build/html/_sources/: HAT.rst.txt  control.rst.txt  decompositions.rst.txt  index.rst.txt  intro.rst.txt  modules.rst.txt  ref.rst.txt  (+3 more)
Python/docs/_build/latex/: hypergraphanalysistoolbox.tex
Python/tests/: hypergraph-class.ipynb  hypergraph_constructors.py
(+174 files in other folders)
