[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "HAT"
version = "1.1.1"
authors = [
  { name="Joshua Pickard", email="jpic@umich.edu" },
]
description = "This package performes hypergraph analysis."
readme = "PYPIREADME.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://hypergraph-analysis-toolbox.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/Jpickard1/Hypergraph-Analysis-Toolbox/issues"
