[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "HypergraphAnalysisToolbox"
version = "1.1.6"
authors = [
  { name="Joshua Pickard", email="jpic@umich.edu" },
]
description = "This package performes hypergraph analysis."
readme = "PYPIREADME.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["HAT"]

[project.urls]
"Homepage" = "https://hypergraph-analysis-toolbox.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/Jpickard1/Hypergraph-Analysis-Toolbox/issues"
